onlyargs_derive/compile_tests/conflicting_short_name.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    min: i32,
    max: i32,
}

fn main() {}
